crates/weft-snapshots/tests/snapshots/swiftui-data/corpus-orders.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-orders as swiftui-data
---
// Generated by `weft swiftui` from the Weft screen "orders".
// Regenerate it from the .weft source, or edit it and read it back with
// `weft import-swiftui`; the `weft…` helpers at the end carry what SwiftUI cannot say.

import Observation
import SwiftUI

/// The data the screen reads and writes.
@Observable
final class OrdersModel {
    var labels: LabelsData = LabelsData()
    var orders: [OrdersItemData] = []

    /// Every property, defaulting to the value it is declared with.
    init(
        labels: LabelsData = LabelsData(),
        orders: [OrdersItemData] = []
    ) {
        self.labels = labels
        self.orders = orders
    }

    struct LabelsData: Hashable, Sendable {
        var total: String = ""
    }

    struct OrdersItemData: Hashable, Sendable {
        var selected: Bool = false
        var id: String = ""
        var total: String = ""
    }
}

extension OrdersModel {
    /// The sample data the screen was generated with.
    static var sample: OrdersModel {
        OrdersModel(
            labels: LabelsData(
                total: "Total"
            ),
            orders: [
                OrdersItemData(
                    selected: true,
                    id: "A-1002",
                    total: "$120.00"
                ),
                OrdersItemData(
                    selected: false,
                    id: "A-1001",
                    total: "$35.50"
                )
            ]
        )
    }
}

/// The host actions the screen names.
enum OrdersAction: String, CaseIterable, Sendable {
    case ordersSortById = "orders.sortById"
    case ordersOpen = "orders.open"
}

/// What the host receives when the screen fires an action.
struct OrdersEvent: Sendable, Equatable {
    var action: OrdersAction
    /// The id of the element that fired it.
    var id: String
    /// The data path of the list item it came from, e.g. `$.todos.2`.
    var item: String?
}

/// The design tokens the screen uses.
struct OrdersTheme: Sendable {
}

struct OrdersScreen: View {
    @Bindable var model: OrdersModel
    var theme = OrdersTheme()
    var perform: (OrdersEvent) -> Void = { _ in }

    var body: some View {
        VStack(alignment: .leading) {
            Text("Orders")
                .font(.title)
                .accessibilityHeading(.h2)
                .accessibilityAddTraits(.isHeader)
                .accessibilityIdentifier("title")
            Grid(alignment: .leading) {
                GridRow {
                    Text("Order")
                        .font(.headline)
                        .onTapGesture { send(.ordersSortById, "col-id") }
                        .weftProp("sort", "descending")
                        .accessibilityIdentifier("col-id")
                    Text(model.labels.total)
                        .font(.headline)
                        .weftProp("sort", "none")
                        .accessibilityIdentifier("col-total")
                }
                ForEach(Array(model.orders.enumerated()), id: \.offset) { orderIndex, order in
                    GridRow {
                        HStack {
                            Text(order.id)
                        }
                        .accessibilityElement(children: .contain)
                        .accessibilityIdentifier("order-id")
                        HStack {
                            Text(order.total)
                                .accessibilityIdentifier("order-amount")
                        }
                        .accessibilityElement(children: .contain)
                        .accessibilityIdentifier("order-total")
                    }
                    .onTapGesture { send(.ordersOpen, "order", item: "$.orders.\(orderIndex)") }
                    .weftProp("selected", order.selected)
                    .accessibilityElement(children: .contain)
                    .accessibilityIdentifier("order")
                }
                .weftEach("order-each")
            }
            .overlay {
                if model.orders.isEmpty {
                    Text("No open orders.")
                        .accessibilityIdentifier("no-orders")
                }
            }
            .weftProp("state", "ready")
            .accessibilityElement(children: .contain)
            .accessibilityLabel("Open orders")
            .accessibilityIdentifier("open-orders")
            Grid(alignment: .leading) {
                GridRow {
                    Text("Order")
                        .font(.headline)
                        .accessibilityIdentifier("col-archived")
                }
            }
            .overlay {
                Text("Nothing archived yet.")
                    .accessibilityIdentifier("archived-empty")
            }
            .weftProp("state", "empty")
            .accessibilityElement(children: .contain)
            .accessibilityLabel("Archived orders")
            .accessibilityIdentifier("archived")
            Grid(alignment: .leading) {
                GridRow {
                    Text("Order")
                        .font(.headline)
                        .accessibilityIdentifier("col-pending")
                }
                GridRow {
                    HStack {
                        Text("Fetching…")
                    }
                    .accessibilityElement(children: .contain)
                    .accessibilityIdentifier("pending-cell")
                }
                .weftProp("selected", true)
                .accessibilityElement(children: .contain)
                .accessibilityIdentifier("pending-row")
            }
            .weftProp("state", "loading")
            .accessibilityElement(children: .contain)
            .accessibilityLabel("Pending orders")
            .accessibilityIdentifier("pending")
        }
        .accessibilityElement(children: .contain)
        .accessibilityLabel("Orders")
        .accessibilityIdentifier("orders")
    }

    private func send(_ action: OrdersAction, _ id: String, item: String? = nil) {
        perform(OrdersEvent(action: action, id: id, item: item))
    }
}

#Preview {
    OrdersScreen(model: .sample)
}

// MARK: - Weft helpers
// Weft semantics SwiftUI has no modifier for. `fileprivate`, so every generated screen carries
// its own copy and several screens can live in one module.

fileprivate extension View {
    /// A Weft attribute SwiftUI cannot express; kept so the screen imports back unchanged.
    func weftProp(_ name: String, _ value: String) -> some View { self }
    func weftProp(_ name: String, _ value: Bool) -> some View { self }
    func weftProp(_ name: String, _ value: Int) -> some View { self }
    func weftProp(_ name: String, _ value: Double) -> some View { self }
    /// Removes the view from layout and accessibility while `hidden` is true.
    func weftHidden(_ hidden: Bool) -> some View { modifier(WeftHidden(hidden: hidden)) }
    /// Names the `<each>` element the repeated content came from.
    func weftEach(_ id: String) -> some View { self }
    /// The keyboard a text field of this Weft `type` asks for.
    func weftFieldType(_ type: String) -> some View {
        #if os(iOS)
        switch type {
        case "email": return AnyView(self.keyboardType(.emailAddress).textInputAutocapitalization(.never))
        case "number": return AnyView(self.keyboardType(.decimalPad))
        case "search": return AnyView(self.submitLabel(.search))
        default: return AnyView(self)
        }
        #else
        return self
        #endif
    }
}

fileprivate struct WeftHidden: ViewModifier {
    let hidden: Bool
    func body(content: Content) -> some View {
        if !hidden { content }
    }
}

fileprivate struct WeftCheckboxStyle: ToggleStyle {
    func makeBody(configuration: Configuration) -> some View {
        Button { configuration.isOn.toggle() } label: {
            HStack {
                Image(systemName: configuration.isOn ? "checkmark.square.fill" : "square")
                configuration.label
            }
        }
        .buttonStyle(.plain)
        .accessibilityValue(configuration.isOn ? "checked" : "unchecked")
    }
}

/// Only web and mail links open; anything else in a document is ignored.
fileprivate func weftURL(_ href: String) -> URL? {
    guard let url = URL(string: href) else { return nil }
    switch url.scheme?.lowercased() {
    case "http", "https", "mailto", nil: return url
    default: return nil
    }
}

// Weft reads any value as text, a flag or a number (SPEC §2.1); these convert the model's types.
fileprivate func weftText(_ v: Int) -> String { String(v) }
fileprivate func weftText(_ v: Bool) -> String { v ? "true" : "false" }
fileprivate func weftText<T>(_ v: T) -> String { "" }
// An array or object is true even when empty (SPEC §2.1): only the model's scalars can be false.
fileprivate func weftOn<T>(_ v: T) -> Bool { true }
fileprivate func weftInt(_ v: String) -> Int { Int(v) ?? 0 }
fileprivate func weftInt(_ v: Bool) -> Int { v ? 1 : 0 }
fileprivate func weftInt<T>(_ v: T) -> Int { 0 }
fileprivate func weftColumns(_ v: Int) -> Int { max(1, v) }
fileprivate func weftHeadingLevel(_ v: Int) -> AccessibilityHeadingLevel {
    switch min(max(v, 1), 6) { case 1: .h1; case 2: .h2; case 3: .h3; case 4: .h4; case 5: .h5; default: .h6 }
}
fileprivate func weftHeadingFont(_ v: Int) -> Font {
    switch min(max(v, 1), 6) { case 1: .largeTitle; case 2: .title; case 3: .title2; case 4: .title3; case 5: .headline; default: .subheadline }
}
